# OOP_MAI_LABS

./: README.md
lab1/: main.cpp
lab1/include/: function.h
lab1/src/: function.cpp
lab1/test/: tests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: array.hpp  octal.hpp
lab2/src/: array.cpp  octal.cpp
lab2/tests/: tests.cpp
lab3/: CMakeLists.txt
lab3/include/: Figure.hpp  FigureArray.hpp  Pentagon.hpp  Point.hpp  Rhomb.hpp  Trapezoid.hpp
lab3/src/: Figure.cpp  FigureArray.cpp  Pentagon.cpp  Point.cpp  Rhomb.cpp  Trapezoid.cpp  main.cpp
lab3/test/: tests.cpp
lab4/: CMakeLists.txt  README.md
lab4/include/: array.hpp  array.ipp  figure.hpp  figure.ipp  point.hpp  point.ipp  rectangle.hpp  rectangle.ipp  square.hpp  square.ipp  trapezoid.hpp  trapezoid.ipp
lab4/src/: main.cpp
lab4/test/: tests.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: DynamicMemory.hpp  Queue.hpp  Queue.ipp
lab5/src/: DynamicMemory.cpp
lab5/test/: tests.cpp
lab6/: CMakeLists.txt
lab6/include/: bull.hpp  dragon.hpp  factory.hpp  frog.hpp  npc.hpp  observer.hpp  visitor.hpp  world.hpp
lab6/src/: bull.cpp  dragon.cpp  factory.cpp  frog.cpp  main.cpp  npc.cpp  observer.cpp  visitor.cpp  world.cpp
lab6/tests/: test.cpp
lab7/: CMakeLists.txt
lab7/include/: battle_visitor.hpp  bull.hpp  dragon.hpp  factory.hpp  frog.hpp  game.hpp  npc.hpp  observer.hpp  visitor.hpp  world.hpp
lab7/src/: battle_visitor.cpp  bull.cpp  dragon.cpp  factory.cpp  frog.cpp  game.cpp  main.cpp  npc.cpp  observer.cpp  visitor.cpp  world.cpp
lab7/tests/: test.cpp
